# Combat-Royale

./: .gitignore  .gitmodules  ;  CMakeLists.txt  CombatRoyale  README.md  cmake_install.cmake
res/json/appearance/: colors.json
res/json/ragdoll/: human_ragdoll.json
resources/json/appearance/: colors.json
resources/json/ragdoll/: human_ragdoll.json
src/: main.cpp
src/game/: Player.cpp  Player.hpp
src/graphics/: PlayerAppearance.hpp
src/graphics/appearance/: HairType.hpp  HelmetType.hpp  PlayerAppearance.cpp  PlayerAppearance.hpp
src/graphics/util/: SpriteInfo.cpp  SpriteInfo.hpp
src/physics/: Box.cpp  Box.hpp  Entity.cpp  Entity.hpp  Ragdoll.cpp  Ragdoll.hpp
src/util/: JsonLoader.cpp  JsonLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
